--- a/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/PropertyGrid.xaml
+++ b/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/PropertyGrid.xaml
@@ -2,9 +2,21 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit">
-    <ScrollViewer>
-        <StackPanel>
-            <xctk:PropertyGrid Margin="2" SelectedObject="{Binding}" />
-        </StackPanel>
-    </ScrollViewer>
+  <ScrollViewer>
+    <StackPanel>
+      <UniformGrid Margin="1,1,1,5">
+        <CheckBox Margin="1" Content="Show Title" IsChecked="{Binding ShowTitle}" />
+        <CheckBox Margin="1" Content="Show Sort Options" IsChecked="{Binding ShowSortOptions}" />
+        <CheckBox Margin="1" Content="Show Search Box" IsChecked="{Binding ShowSearchBox}" />
+        <CheckBox Margin="1" Content="Show Summary" IsChecked="{Binding ShowSummary}" />
+      </UniformGrid>
+      
+      <xctk:PropertyGrid Margin="2"
+        ShowTitle="{Binding ShowTitle}"
+        ShowSortOptions="{Binding ShowSortOptions}"
+        ShowSearchBox="{Binding ShowSearchBox}"
+        ShowSummary="{Binding ShowSummary}"
+        SelectedObject="{Binding User}" />
+    </StackPanel>
+  </ScrollViewer>
 </UserControl>
