--- a/ModernUI.Xceed/ModernUI.Xceed.Toolkit/Assets/Controls/PropertyGrid.xaml
+++ b/ModernUI.Xceed/ModernUI.Xceed.Toolkit/Assets/Controls/PropertyGrid.xaml
@@ -25,12 +25,12 @@
   <xctk:IsDefaultCategoryConverter x:Key="IsDefaultCategoryConverter" />
   <xctk:SelectedObjectConverter x:Key="ObjectConverter" />
 
-  <x:Static x:Key="EmptyString"
-           Member="sys:String.Empty" />
+  <x:Static x:Key="EmptyString" Member="sys:String.Empty" />
 
   <!-- PropertyGrid numeric Editors -->
   <Style TargetType="{x:Type xctk:PropertyGridEditorByteUpDown}" BasedOn="{StaticResource NumericUpDown}">
     <Setter Property="BorderThickness" Value="0" />
+    <Setter Property="Padding" Value="1" />
     <Style.Triggers>
       <MultiTrigger>
         <MultiTrigger.Conditions>
@@ -45,6 +45,7 @@
 
   <Style TargetType="{x:Type xctk:PropertyGridEditorDecimalUpDown}" BasedOn="{StaticResource NumericUpDown}">
     <Setter Property="BorderThickness" Value="0" />
+    <Setter Property="Padding" Value="1" />
     <Style.Triggers>
       <MultiTrigger>
         <MultiTrigger.Conditions>
@@ -59,6 +60,7 @@
 
   <Style TargetType="{x:Type xctk:PropertyGridEditorDoubleUpDown}" BasedOn="{StaticResource NumericUpDown}">
     <Setter Property="BorderThickness" Value="0" />
+    <Setter Property="Padding" Value="1" />
     <Style.Triggers>
       <MultiTrigger>
         <MultiTrigger.Conditions>
@@ -73,6 +75,7 @@
 
   <Style TargetType="{x:Type xctk:PropertyGridEditorIntegerUpDown}" BasedOn="{StaticResource NumericUpDown}">
     <Setter Property="BorderThickness" Value="0" />
+    <Setter Property="Padding" Value="1" />
     <Style.Triggers>
       <MultiTrigger>
         <MultiTrigger.Conditions>
@@ -87,6 +90,7 @@
 
   <Style TargetType="{x:Type xctk:PropertyGridEditorLongUpDown}" BasedOn="{StaticResource NumericUpDown}">
     <Setter Property="BorderThickness" Value="0" />
+    <Setter Property="Padding" Value="1" />
     <Style.Triggers>
       <MultiTrigger>
         <MultiTrigger.Conditions>
@@ -101,6 +105,7 @@
 
   <Style TargetType="{x:Type xctk:PropertyGridEditorShortUpDown}" BasedOn="{StaticResource NumericUpDown}">
     <Setter Property="BorderThickness" Value="0" />
+    <Setter Property="Padding" Value="1" />
     <Style.Triggers>
       <MultiTrigger>
         <MultiTrigger.Conditions>
@@ -115,6 +120,7 @@
 
   <Style TargetType="{x:Type xctk:PropertyGridEditorSingleUpDown}" BasedOn="{StaticResource NumericUpDown}">
     <Setter Property="BorderThickness" Value="0" />
+    <Setter Property="Padding" Value="1" />
     <Style.Triggers>
       <MultiTrigger>
         <MultiTrigger.Conditions>
