[add] MultiLineTextEditor styles. Uses paths rather than images to support light/dark themes.

--- a/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/StandardControls.xaml
+++ b/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/StandardControls.xaml
@@ -32,7 +32,9 @@
             <xctk:TimePicker Margin="2" />
 
             <xctk:MaskedTextBox Margin="2" Mask="+(00) 0000-000000" />
-          
+
+            <xctk:MultiLineTextEditor Margin="2" />
+
         </StackPanel>
     </ScrollViewer>
 </UserControl>
