[add] RangeSlider style.

--- a/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/StandardControls.xaml
+++ b/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/StandardControls.xaml
@@ -35,6 +35,8 @@
 
             <xctk:MultiLineTextEditor Margin="2" />
 
+            <xctk:RangeSlider Margin="2" Minimum="-100" Maximum="100" LowerValue="-90" HigherValue="90" />
+          
         </StackPanel>
     </ScrollViewer>
 </UserControl>
