[add] RichTextBox and RichTextBoxFormatBar first pass. RTF box needs highlight templates overriding.
[update] README

--- a/ModernUI.Xceed/ModernUI.Xceed.Toolkit/Assets/ModernUI.Xceed.Toolkit.xaml
+++ b/ModernUI.Xceed/ModernUI.Xceed.Toolkit/Assets/ModernUI.Xceed.Toolkit.xaml
@@ -19,6 +19,8 @@
         <ResourceDictionary Source="Controls/MultiLineTextEditor.xaml" />
         <ResourceDictionary Source="Controls/PropertyGrid.xaml" />
         <ResourceDictionary Source="Controls/RangeSlider.xaml" />
+        <ResourceDictionary Source="Controls/RichTextBox.xaml" />
+        <ResourceDictionary Source="Controls/RichTextBoxFormatBar.xaml" />
         <ResourceDictionary Source="Controls/SelectorItem.xaml" />
         <ResourceDictionary Source="Controls/SplitButton.xaml" />
         <ResourceDictionary Source="Controls/TimePicker.xaml" />
