--- a/ModernUI.Xceed/ModernUI.Xceed.Toolkit/Assets/Controls/RichTextBox.xaml
+++ b/ModernUI.Xceed/ModernUI.Xceed.Toolkit/Assets/Controls/RichTextBox.xaml
@@ -2,12 +2,8 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit">
     
-    <Style TargetType="{x:Type xctk:RichTextBox}">
-      <Setter Property="BorderThickness" Value="1" />
-      <Setter Property="Background" Value="{DynamicResource InputBackground}" />
-      <Setter Property="Foreground" Value="{DynamicResource InputText}" />
-      <Setter Property="Padding" Value="2" />
-      <Setter Property="BorderBrush" Value="{DynamicResource InputBorder}" />
+    <Style TargetType="{x:Type xctk:RichTextBox}" BasedOn="{StaticResource {x:Type RichTextBox}}">
+
     </Style>
 
 </ResourceDictionary>
