--- a/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/StandardControls.xaml
+++ b/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/StandardControls.xaml
@@ -1,7 +1,8 @@
 ﻿<UserControl x:Class="ModernUI.Xceed.Toolkit.Example.Pages.StandardControls"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit">
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib">
     <ScrollViewer>
         <StackPanel>
 
@@ -36,6 +37,8 @@
             <xctk:MultiLineTextEditor Margin="2" />
 
             <xctk:RangeSlider Margin="2" Minimum="-100" Maximum="100" LowerValue="-90" HigherValue="90" />
+          
+            <xctk:ValueRangeTextBox Margin="2" ValueDataType="{x:Type sys:Double}" MaxValue="10" MinValue="0" />
           
         </StackPanel>
     </ScrollViewer>
