--- a/ModernUI.Xceed/ModernUI.Xceed.Toolkit/Assets/Controls/CheckListBox.xaml
+++ b/ModernUI.Xceed/ModernUI.Xceed.Toolkit/Assets/Controls/CheckListBox.xaml
@@ -3,7 +3,7 @@
                     xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit">
 
     <Style TargetType="{x:Type xctk:CheckListBox}">
-        <Setter Property="Background" Value="{DynamicResource ItemBackground}" />
+        <Setter Property="Background" Value="{DynamicResource WindowBackground}" />
         <Setter Property="BorderBrush" Value="{DynamicResource ItemBorder}" />
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="KeyboardNavigation.TabNavigation" Value="Once" />
@@ -11,7 +11,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type xctk:CheckListBox}">
                     <Border Padding="2" 
-                       Background="{DynamicResource ItemBackground}"
+                       Background="{TemplateBinding Background}"
                        BorderBrush="{TemplateBinding BorderBrush}"
                        BorderThickness="{TemplateBinding BorderThickness}">
                         <ScrollViewer Padding="{TemplateBinding Padding}" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
