[add] controls for expander and tabcontrol to the example project.
Currently the controls are not styled.

--- a/ModernUI.Xceed/Examples/ModernUI.Standard.Controls.Example/Pages/About.xaml
+++ b/ModernUI.Xceed/Examples/ModernUI.Standard.Controls.Example/Pages/About.xaml
@@ -4,6 +4,8 @@
       Title="About">
 
     <TextBlock TextWrapping="Wrap">
-        TODO
+      The aim of the ModernUI.Standard.Controls library is to implement
+      ModernUI styles for all standard windows controls which are not currently
+      implemented by the core library.
     </TextBlock>
 </Page>
