[add] Implement an AdvancedColorCanvas which supports HDR color picking.

--- a/ModernUI.Xceed/Examples/ModernUI.Standard.Controls.Example/Pages/ControlsRoot.xaml
+++ b/ModernUI.Xceed/Examples/ModernUI.Standard.Controls.Example/Pages/ControlsRoot.xaml
@@ -9,6 +9,7 @@
           <mui:Link DisplayName="GroupBox" Source="Pages\GroupBox.xaml" />
           <mui:Link DisplayName="Expander" Source="Pages\Expander.xaml" />
           <mui:Link DisplayName="Tab Control" Source="Pages\TabControl.xaml" />
+          <mui:Link DisplayName="Advanced Color Picker" Source="Pages\AdvancedColorPicker.xaml" />
         </mui:ModernTab.Links>
     </mui:ModernTab>
 
