--- a/ModernUI.Xceed/Examples/ModernUI.Standard.Controls.Example/App.xaml
+++ b/ModernUI.Xceed/Examples/ModernUI.Standard.Controls.Example/App.xaml
@@ -8,6 +8,7 @@
       <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/FirstFloor.ModernUI;component/Assets/ModernUI.xaml" />
         <ResourceDictionary Source="/FirstFloor.ModernUI;component/Assets/ModernUI.Dark.xaml" />
+        <ResourceDictionary Source="/ModernUI.Xceed.Toolkit;component/Assets/ModernUI.Xceed.Toolkit.xaml" />
         <ResourceDictionary Source="/ModernUI.Standard.Controls;component/Assets/ModernUI.Standard.Controls.xaml" />
       </ResourceDictionary.MergedDictionaries>
       <Color x:Key="AccentColor">#7777FF</Color>
