--- a/ModernUI.Xceed/ModernUI.Xceed.AvalonDock/Assets/Theme.xaml
+++ b/ModernUI.Xceed/ModernUI.Xceed.AvalonDock/Assets/Theme.xaml
@@ -103,7 +103,7 @@
                                 HorizontalAlignment="Stretch"  
                                 BorderBrush="{TemplateBinding BorderBrush}"
                                 BorderThickness="{TemplateBinding BorderThickness}" 
-                                Background="{TemplateBinding Background}" 
+                                Background="{DynamicResource WindowColor}" 
                                 Grid.Column="0"
                                 KeyboardNavigation.DirectionalNavigation="Contained"
                                 Grid.Row="1" 
@@ -523,7 +523,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type avalonDockControls:OverlayWindow}">
                     <Canvas x:Name="PART_DropTargetsContainer" Opacity="0.9">
-                        <Path x:Name="PART_PreviewBox" Fill="AliceBlue" StrokeThickness="2" Stroke="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+                        <Path x:Name="PART_PreviewBox" Fill="{DynamicResource WindowBorder}" StrokeThickness="2" Stroke="{DynamicResource WindowBorderActive}"/>
                         <Grid x:Name="PART_DockingManagerDropTargets" >
                             <Image x:Name="PART_DockingManagerDropTargetLeft" VerticalAlignment="Center" HorizontalAlignment="Left" Source="../Images/DockAnchorableLeft.PNG" Stretch="None" />
                             <Image x:Name="PART_DockingManagerDropTargetRight" VerticalAlignment="Center" HorizontalAlignment="Right" Source="../Images/DockAnchorableRight.PNG" Stretch="None" />
