--- a/ModernUI.Xceed/ModernUI.Xceed.Toolkit/Assets/Controls/CalculatorUpDown.xaml
+++ b/ModernUI.Xceed/ModernUI.Xceed.Toolkit/Assets/Controls/CalculatorUpDown.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-                    xmlns:sys="clr-namespace:System;assembly=mscorlib">
+                    xmlns:sys="clr-namespace:System;assembly=mscorlib"
+                    xmlns:themes="clr-namespace:Xceed.Wpf.Toolkit.Themes;assembly=Xceed.Wpf.Toolkit">
 
     <xctk:InverseBoolConverter x:Key="InverseBoolConverter" />
 
@@ -11,24 +12,31 @@
                 <ControlTemplate TargetType="ToggleButton">
                     <Grid SnapsToDevicePixels="True">
                         <xctk:ButtonChrome x:Name="ToggleButtonChrome"
-                                       Background="{DynamicResource ButtonBackground}"
-                                       BorderBrush="{DynamicResource ButtonBorder}"
-                                       CornerRadius="0"
-                                       BorderThickness="1"
-                                       RenderChecked="{Binding IsOpen, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=xctk:CalculatorUpDown}}"
-                                       RenderEnabled="{Binding IsEnabled, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=xctk:CalculatorUpDown}}"
-									   RenderMouseOver="{TemplateBinding IsMouseOver}"
-									   RenderPressed="{TemplateBinding IsPressed}">
+                                 Background="{DynamicResource ButtonBackground}"
+                                 BorderBrush="{DynamicResource ButtonBorder}"
+                                 CornerRadius="0"
+                                 BorderThickness="1"
+                                 RenderChecked="{Binding IsOpen, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=xctk:CalculatorUpDown}}"
+                                 RenderEnabled="{Binding IsEnabled, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=xctk:CalculatorUpDown}}"
+                                 RenderMouseOver="{TemplateBinding IsMouseOver}"
+                                 RenderPressed="{TemplateBinding IsPressed}">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*" />
                                     <ColumnDefinition Width="Auto" />
                                 </Grid.ColumnDefinitions>
 
-                                <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Stretch" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                                <ContentPresenter HorizontalAlignment="Stretch"
+                                    VerticalAlignment="Stretch"
+                                    SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
 
                                 <Grid x:Name="arrowGlyph" IsHitTestVisible="False" Grid.Column="1" Margin="5">
-                                    <Path x:Name="Arrow" Width="7" Height="4" Data="M 0,1 C0,1 0,0 0,0 0,0 3,0 3,0 3,0 3,1 3,1 3,1 4,1 4,1 4,1 4,0 4,0 4,0 7,0 7,0 7,0 7,1 7,1 7,1 6,1 6,1 6,1 6,2 6,2 6,2 5,2 5,2 5,2 5,3 5,3 5,3 4,3 4,3 4,3 4,4 4,4 4,4 3,4 3,4 3,4 3,3 3,3 3,3 2,3 2,3 2,3 2,2 2,2 2,2 1,2 1,2 1,2 1,1 1,1 1,1 0,1 0,1 z" Fill="{DynamicResource ItemText}" />
+                                    <Path x:Name="Arrow" 
+                                          Width="9"
+                                          Height="5"
+                                          Data="{StaticResource DownArrowGeometry}"
+                                          Fill="{DynamicResource ItemText}"
+                                          Margin="0,1,0,0" />
                                 </Grid>
                             </Grid>
                         </xctk:ButtonChrome>
@@ -44,14 +52,17 @@
     </Style>
 
     <DataTemplate x:Key="DefaultWatermarkTemplate">
-        <ContentControl Content="{Binding}" Foreground="{DynamicResource InputTextDisabled}" Focusable="False" Margin="0,0,3,0" />
+        <ContentControl Content="{Binding}"
+                    Foreground="{DynamicResource InputTextDisabled}"
+                    Focusable="False"
+                    Margin="0,0,3,0" />
     </DataTemplate>
 
     <Style TargetType="{x:Type xctk:CalculatorUpDown}">
         <Setter Property="Background" Value="{DynamicResource InputBackground}" />
         <Setter Property="BorderThickness" Value="1,1,0,1" />
         <Setter Property="BorderBrush" Value="{DynamicResource InputBorder}" />
-        <Setter Property="Focusable" Value="False" />
+        <Setter Property="IsTabStop" Value="False" />
         <Setter Property="Foreground" Value="{DynamicResource InputText}" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="HorizontalContentAlignment" Value="Right" />
@@ -66,79 +77,78 @@
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
                         <xctk:ButtonSpinner x:Name="PART_Spinner"
-                                       IsTabStop="False"
-                                       Background="{TemplateBinding Background}"
-                                       BorderBrush="{TemplateBinding BorderBrush}"
-                                       BorderThickness="{TemplateBinding BorderThickness}"
-                                       ButtonSpinnerLocation="{TemplateBinding ButtonSpinnerLocation}"
-                                       AllowSpin="{TemplateBinding AllowSpin}"
-                                       ShowButtonSpinner="{TemplateBinding ShowButtonSpinner}"
-                                       VerticalContentAlignment="Stretch"
-                                       HorizontalAlignment="Stretch">
+                                 IsTabStop="False"
+                                 Background="{TemplateBinding Background}"
+                                 BorderBrush="{TemplateBinding BorderBrush}"
+                                 BorderThickness="{TemplateBinding BorderThickness}"
+                                 ButtonSpinnerLocation="{TemplateBinding ButtonSpinnerLocation}"
+                                 AllowSpin="{TemplateBinding AllowSpin}"
+                                 ShowButtonSpinner="{TemplateBinding ShowButtonSpinner}"
+                                 VerticalContentAlignment="Stretch"
+                                 HorizontalAlignment="Stretch">
                             <xctk:WatermarkTextBox x:Name="PART_TextBox"
-                                             BorderThickness="0"
-                                             Background="{TemplateBinding Background}"
-                                             ContextMenu="{TemplateBinding ContextMenu}"
-                                             FontFamily="{TemplateBinding FontFamily}" 
-                                             FontSize="{TemplateBinding FontSize}" 
-                                             FontStretch="{TemplateBinding FontStretch}"
-                                             FontStyle="{TemplateBinding FontStyle}" 
-                                             FontWeight="{TemplateBinding FontWeight}" 
-                                             Foreground="{TemplateBinding Foreground}" 
-                                             HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                             IsReadOnly="{Binding IsReadOnly, RelativeSource={RelativeSource TemplatedParent}}"
-                                             IsTabStop="{TemplateBinding IsTabStop}"
-                                             MinWidth="20"
-                                             AcceptsReturn="False"
-                                             Padding="{TemplateBinding Padding}"
-                                             SelectAllOnGotFocus="{TemplateBinding SelectAllOnGotFocus}"
-                                             AutoSelectBehavior="{TemplateBinding AutoSelectBehavior}"
-                                             AutoMoveFocus="{TemplateBinding AutoMoveFocus}"
-                                             TextAlignment="{TemplateBinding TextAlignment}"
-                                             TextWrapping="NoWrap" 
-                                             TabIndex="{TemplateBinding TabIndex}"
-                                             VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
-                                             Watermark="{TemplateBinding Watermark}"
-                                             WatermarkTemplate="{TemplateBinding WatermarkTemplate}" />
+                                      BorderThickness="0"
+                                      Background="{TemplateBinding Background}"
+                                      ContextMenu="{TemplateBinding ContextMenu}"
+                                      FontFamily="{TemplateBinding FontFamily}"
+                                      FontSize="{TemplateBinding FontSize}"
+                                      FontStretch="{TemplateBinding FontStretch}"
+                                      FontStyle="{TemplateBinding FontStyle}"
+                                      FontWeight="{TemplateBinding FontWeight}"
+                                      Foreground="{TemplateBinding Foreground}"
+                                      HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                      IsReadOnly="{Binding IsReadOnly, RelativeSource={RelativeSource TemplatedParent}}"
+                                      IsTabStop="True"
+                                      MinWidth="20"
+                                      AcceptsReturn="False"
+                                      Padding="{TemplateBinding Padding}"
+                                      AutoSelectBehavior="{TemplateBinding AutoSelectBehavior}"
+                                      AutoMoveFocus="{TemplateBinding AutoMoveFocus}"
+                                      TextAlignment="{TemplateBinding TextAlignment}"
+                                      TextWrapping="NoWrap"
+                                      TabIndex="{TemplateBinding TabIndex}"
+                                      VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                                      Watermark="{TemplateBinding Watermark}"
+                                      WatermarkTemplate="{TemplateBinding WatermarkTemplate}" />
                         </xctk:ButtonSpinner>
                         <ToggleButton x:Name="_calculatorToggleButton"
-                                 Grid.Column="1"
-                                 Focusable="False"
-                                 IsChecked="{Binding IsOpen, RelativeSource={RelativeSource TemplatedParent}}"
-                                 Style="{StaticResource CalculatorToggleButtonStyle}"
-                                 IsHitTestVisible="{Binding IsOpen, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource InverseBoolConverter}}" />
-                        <Popup Grid.Column="0" x:Name="PART_CalculatorPopup"
-                           IsOpen="{Binding IsChecked, ElementName=_calculatorToggleButton}"
-                           StaysOpen="False"
-                           ToolTip="{x:Static sys:String.Empty}">
+                            Grid.Column="1"
+                            Focusable="False"
+                            IsChecked="{Binding IsOpen, RelativeSource={RelativeSource TemplatedParent}}"
+                            Style="{StaticResource CalculatorToggleButtonStyle}"
+                            IsHitTestVisible="{Binding IsOpen, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource InverseBoolConverter}}" >
+                        </ToggleButton>
+                        <Popup x:Name="PART_CalculatorPopup"
+                                IsOpen="{Binding IsChecked, ElementName=_calculatorToggleButton}"
+                                StaysOpen="False"
+                                ToolTip="{x:Static sys:String.Empty}">
                             <Popup.Resources>
                                 <Style TargetType="ToolTip">
                                     <Style.Triggers>
-                                        <Trigger Property="Content"
-                                                   Value="{x:Static sys:String.Empty}">
-                                            <Setter Property="Visibility"
-                                                     Value="Collapsed" />
+                                        <Trigger Property="Content" Value="{x:Static sys:String.Empty}">
+                                            <Setter Property="Visibility" Value="Collapsed" />
                                         </Trigger>
                                     </Style.Triggers>
                                 </Style>
                             </Popup.Resources>
-                            <Border BorderThickness="1" Background="{DynamicResource WindowBackground}" BorderBrush="{DynamicResource WindowBorderActive}" Padding="3">
+                            <Border BorderThickness="1"
+                                    Background="{DynamicResource WindowBackground}"
+                                    BorderBrush="{DynamicResource WindowBorderActive}"
+                                    Padding="3">
                                 <StackPanel>
                                     <xctk:Calculator x:Name="PART_Calculator"
-                                             Background="Transparent"
-                                             BorderThickness="0"
-                                             DisplayText="{Binding DisplayText, RelativeSource={RelativeSource TemplatedParent}}"
-                                             Memory="{Binding Memory, RelativeSource={RelativeSource TemplatedParent}}"
-                                             Precision="{Binding Precision, RelativeSource={RelativeSource TemplatedParent}}" />
+                                            Background="Transparent"
+                                            BorderThickness="0"
+                                            DisplayText="{Binding DisplayText, RelativeSource={RelativeSource TemplatedParent}}"
+                                            Memory="{Binding Memory, RelativeSource={RelativeSource TemplatedParent}}"
+                                            Precision="{Binding Precision, RelativeSource={RelativeSource TemplatedParent}}" />
                                 </StackPanel>
                             </Border>
                         </Popup>
                     </Grid>
                     <ControlTemplate.Triggers>
-                        <Trigger Property="IsEnabled"
-                           Value="False">
-                            <Setter Property="Foreground"
-                             Value="{DynamicResource ItemTextDisabled}" />
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="Foreground" Value="{DynamicResource ItemTextDisabled}" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
