--- a/ModernUI.Xceed/ModernUI.Xceed.Toolkit/Assets/Controls/NumericUpDown.xaml
+++ b/ModernUI.Xceed/ModernUI.Xceed.Toolkit/Assets/Controls/NumericUpDown.xaml
@@ -5,7 +5,10 @@
     <xctk:InverseBoolConverter x:Key="InverseBoolConverter" />
 
     <DataTemplate x:Key="DefaultWatermarkTemplate">
-        <ContentControl Content="{Binding}" Foreground="{DynamicResource InputTextDisabled}" Focusable="False" Margin="0,0,3,0" />
+        <ContentControl Content="{Binding}"
+                    Foreground="{DynamicResource InputTextDisabled}"
+                    Focusable="False"
+                    Margin="0,0,3,0" />
     </DataTemplate>
 
     <Style x:Key="NumericUpDown" TargetType="{x:Type xctk:InputBase}">
@@ -14,7 +17,7 @@
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="Foreground" Value="{DynamicResource InputText}" />
         <Setter Property="HorizontalContentAlignment" Value="Right" />
-        <Setter Property="Focusable"  Value="False" />
+        <Setter Property="IsTabStop" Value="False" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="TextAlignment" Value="Right" />
         <Setter Property="WatermarkTemplate" Value="{StaticResource DefaultWatermarkTemplate}" />
@@ -22,58 +25,52 @@
             <Setter.Value>
                 <ControlTemplate TargetType="Control">
                     <xctk:ButtonSpinner x:Name="PART_Spinner"
-                                    IsTabStop="False"
-                                    Background="{TemplateBinding Background}"
-                                    BorderThickness="{TemplateBinding BorderThickness}"
-                                    BorderBrush="{TemplateBinding BorderBrush}"
-                                    HorizontalContentAlignment="Stretch"
-                                    VerticalContentAlignment="Stretch"
-                                    AllowSpin="{Binding AllowSpin, RelativeSource={RelativeSource TemplatedParent}}"
-                                    ShowButtonSpinner="{Binding ShowButtonSpinner, RelativeSource={RelativeSource TemplatedParent}}"
-                                    ButtonSpinnerLocation="{Binding ButtonSpinnerLocation, RelativeSource={RelativeSource TemplatedParent}}">
+                               IsTabStop="False"
+                               Background="{TemplateBinding Background}"
+                               BorderThickness="{TemplateBinding BorderThickness}"
+                               BorderBrush="{TemplateBinding BorderBrush}"
+                               HorizontalContentAlignment="Stretch"
+                               VerticalContentAlignment="Stretch"
+                               AllowSpin="{Binding AllowSpin, RelativeSource={RelativeSource TemplatedParent}}"
+                               ShowButtonSpinner="{Binding ShowButtonSpinner, RelativeSource={RelativeSource TemplatedParent}}"
+                               ButtonSpinnerLocation="{Binding ButtonSpinnerLocation, RelativeSource={RelativeSource TemplatedParent}}">
                         <xctk:WatermarkTextBox x:Name="PART_TextBox"
-                                          BorderThickness="0"
-                                          Background="Transparent"
-                                          ContextMenu="{TemplateBinding ContextMenu}"
-                                          FontFamily="{TemplateBinding FontFamily}" 
-                                          FontSize="{TemplateBinding FontSize}" 
-                                          FontStretch="{TemplateBinding FontStretch}"
-                                          FontStyle="{TemplateBinding FontStyle}" 
-                                          FontWeight="{TemplateBinding FontWeight}" 
-                                          Foreground="{TemplateBinding Foreground}" 
-                                          HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                          IsUndoEnabled="{Binding IsUndoEnabled, RelativeSource={RelativeSource TemplatedParent}}"
-                                          IsTabStop="{TemplateBinding IsTabStop}"
-                                          MinWidth="20"
-                                          AcceptsReturn="False"
-                                          Padding="{TemplateBinding Padding}"
-                                          SelectAllOnGotFocus="{Binding SelectAllOnGotFocus, RelativeSource={RelativeSource TemplatedParent}}"
-                                          AutoSelectBehavior="{Binding AutoSelectBehavior, RelativeSource={RelativeSource TemplatedParent}}"
-                                          AutoMoveFocus="{Binding AutoMoveFocus, RelativeSource={RelativeSource TemplatedParent}}"
-                                          TextAlignment="{Binding TextAlignment, RelativeSource={RelativeSource TemplatedParent}}"
-                                          TextWrapping="NoWrap" 
-                                          TabIndex="{TemplateBinding TabIndex}"
-                                          VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
-                                          Watermark="{Binding Watermark, RelativeSource={RelativeSource TemplatedParent}}"
-                                          WatermarkTemplate="{Binding WatermarkTemplate, RelativeSource={RelativeSource TemplatedParent}}" />
+                                    BorderThickness="0"
+                                    Background="Transparent"
+                                    ContextMenu="{TemplateBinding ContextMenu}"
+                                    FontFamily="{TemplateBinding FontFamily}"
+                                    FontSize="{TemplateBinding FontSize}"
+                                    FontStretch="{TemplateBinding FontStretch}"
+                                    FontStyle="{TemplateBinding FontStyle}"
+                                    FontWeight="{TemplateBinding FontWeight}"
+                                    Foreground="{TemplateBinding Foreground}"
+                                    HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                    IsUndoEnabled="{Binding IsUndoEnabled, RelativeSource={RelativeSource TemplatedParent}}"
+                                    IsTabStop="True"
+                                    MinWidth="20"
+                                    AcceptsReturn="False"
+                                    Padding="{TemplateBinding Padding}"
+                                    AutoSelectBehavior="{Binding AutoSelectBehavior, RelativeSource={RelativeSource TemplatedParent}}"
+                                    AutoMoveFocus="{Binding AutoMoveFocus, RelativeSource={RelativeSource TemplatedParent}}"
+                                    TextAlignment="{Binding TextAlignment, RelativeSource={RelativeSource TemplatedParent}}"
+                                    TextWrapping="NoWrap"
+                                    TabIndex="{TemplateBinding TabIndex}"
+                                    VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                                    Watermark="{Binding Watermark, RelativeSource={RelativeSource TemplatedParent}}"
+                                    WatermarkTemplate="{Binding WatermarkTemplate, RelativeSource={RelativeSource TemplatedParent}}"
+                                    MaxLength="{Binding MaxLength, RelativeSource={RelativeSource TemplatedParent}}">
+                        </xctk:WatermarkTextBox>
                     </xctk:ButtonSpinner>
                     <ControlTemplate.Triggers>
                         <MultiDataTrigger>
                             <MultiDataTrigger.Conditions>
-                                <Condition Binding="{Binding IsReadOnly, RelativeSource={RelativeSource Self}}"
-                                   Value="False" />
-                                <Condition Binding="{Binding AllowTextInput, RelativeSource={RelativeSource Self}}"
-                                   Value="False" />
+                                <Condition Binding="{Binding IsReadOnly, RelativeSource={RelativeSource Self}}" Value="False" />
+                                <Condition Binding="{Binding AllowTextInput, RelativeSource={RelativeSource Self}}" Value="False" />
                             </MultiDataTrigger.Conditions>
-                            <Setter Property="IsReadOnly"
-                             Value="True"
-                             TargetName="PART_TextBox" />
+                            <Setter Property="IsReadOnly" Value="True" TargetName="PART_TextBox" />
                         </MultiDataTrigger>
-                        <DataTrigger Binding="{Binding IsReadOnly, RelativeSource={RelativeSource Self}}"
-                               Value="True">
-                            <Setter Property="IsReadOnly"
-                             Value="True"
-                             TargetName="PART_TextBox" />
+                        <DataTrigger Binding="{Binding IsReadOnly, RelativeSource={RelativeSource Self}}" Value="True">
+                            <Setter Property="IsReadOnly" Value="True" TargetName="PART_TextBox" />
                         </DataTrigger>
                         <Trigger Property="IsEnabled" Value="False">
                             <Setter Property="Foreground" Value="{DynamicResource InputTextDisabled}" />
