Update avalondock styles to build against extended toolkit 3.5.0

--- a/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/ControlsRoot.xaml
+++ b/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/Pages/ControlsRoot.xaml
@@ -11,9 +11,9 @@
             <mui:Link DisplayName="CheckList Controls" Source="Pages\CheckListControls.xaml" />
             <mui:Link DisplayName="Calculator Control" Source="Pages\CalculatorControl.xaml" />
             <mui:Link DisplayName="Color Controls [BROKEN]" Source="Pages\ColorControls.xaml" />
-            <mui:Link DisplayName="Property Grid [BROKEN]" Source="Pages\PropertyGrid.xaml" />
-            <mui:Link DisplayName="Collection Control [BROKEN]" Source="Pages\CollectionControl.xaml" />
-            <mui:Link DisplayName="Rich Text Control [BROKEN]" Source="Pages\RichTextControl.xaml" />
+            <mui:Link DisplayName="Property Grid" Source="Pages\PropertyGrid.xaml" />
+            <mui:Link DisplayName="Collection Control" Source="Pages\CollectionControl.xaml" />
+            <mui:Link DisplayName="Rich Text Control" Source="Pages\RichTextControl.xaml" />
         </mui:ModernTab.Links>
     </mui:ModernTab>
 
