--- a/ModernUI.Xceed/ModernUI.Standard.Controls/Assets/ModernUI.Standard.Controls.xaml
+++ b/ModernUI.Xceed/ModernUI.Standard.Controls/Assets/ModernUI.Standard.Controls.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
   <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="Controls/Expander.xaml" />
         <ResourceDictionary Source="Controls/GroupBox.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
