Add styles for tab controls and tab items.

--- a/ModernUI.Xceed/ModernUI.Standard.Controls/Assets/ModernUI.Standard.Controls.xaml
+++ b/ModernUI.Xceed/ModernUI.Standard.Controls/Assets/ModernUI.Standard.Controls.xaml
@@ -4,6 +4,7 @@
   <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Controls/Expander.xaml" />
         <ResourceDictionary Source="Controls/GroupBox.xaml" />
+        <ResourceDictionary Source="Controls/TabControl.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
 </ResourceDictionary>
