Add ModernUI themes for ToggleSwitch
 * Also updates projects to dotnet framework 4.8

--- a/ModernUI.Xceed/Examples/ModernUI.Standard.Controls.Example/App.xaml
+++ b/ModernUI.Xceed/Examples/ModernUI.Standard.Controls.Example/App.xaml
@@ -8,6 +8,7 @@
         <ResourceDictionary Source="/FirstFloor.ModernUI;component/Assets/ModernUI.xaml" />
         <ResourceDictionary Source="/FirstFloor.ModernUI;component/Assets/ModernUI.Dark.xaml" />
         <ResourceDictionary Source="/ModernUI.Standard.Controls;component/Assets/ModernUI.Standard.Controls.xaml" />
+        <ResourceDictionary Source="/ModernUI.ToggleSwitch;component/Assets/ModernUI.ToggleSwitch.xaml" />
       </ResourceDictionary.MergedDictionaries>
       <Color x:Key="AccentColor">#7777FF</Color>
     </ResourceDictionary>
